--- a/index.html
+++ b/index.html
@@ -18,3 +18,10 @@
     </section>
 </body>    
 </html>
+
+<section class="social-media">
+    <h2>Media Sosial</h2>
+    <a href="https://www.facebook.com/">Facebook</a>
+    <a href="https://www.twitter.com/">Twitter</a>
+    <a href="https://www.instagram.com/bilalsunaryo/">Instagram</a>
+</section>
