#2 feature social-media selesai

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portofolio Saya</title>
 <link rel="stylesheet" href="./assets/css/styles.css">
+<link rel="stylesheet" href="./assets/js/index.js">
+<script src="./assets/js/index.js"></script>
 </head>
 <body>
     <header>
@@ -25,3 +27,15 @@
     <a href="https://www.twitter.com/">Twitter</a>
     <a href="https://www.instagram.com/bilalsunaryo/">Instagram</a>
 </section>
+
+<!-- Section portofolio -->
+<section class="search-form">
+    <h2>Cari Proyek</h2>
+    <form action="#">
+        <input type="text" name="search" placeholder="Masukkan kata kunci">
+        <button type="submit">Cari</button>
+    </form>
+</section>
+<div class="container" id="portfolioContainer">
+    <!-- List portofolio akan ditambahkan oleh JavaScript di sini -->
+</div>
