--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>Portofolio Saya</title>
 <link rel="stylesheet" href="./assets/css/styles.css">
 <link rel="stylesheet" href="./assets/js/index.js">
-
 </head>
 <body>
     <header>
@@ -36,4 +35,7 @@
 </section>
 <div class="container" id="portfolioContainer">
     <!-- List portofolio akan ditambahkan oleh JavaScript di sini -->
-
+</div>
+</body>
+<script src="./assets/js/index.js"></script>
+</html>
